--- a/ECommerceClient/src/app/app.html
+++ b/ECommerceClient/src/app/app.html
@@ -17,7 +17,7 @@
                     <a class="nav-link active" aria-current="page" routerLink="baskets">Basket</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="admin">Admin</a>
+                    <button class="btn btn-outline-success" routerLink="admin" type="submit">Admin</button>
                 </li>
             </ul>
             <form class="d-flex" role="search">
@@ -28,3 +28,4 @@
     </div>
 </nav>
 <router-outlet></router-outlet>
+<ngx-spinner size="default" name="line-spin-fade-rotating" type="line-spin-fade-rotating"></ngx-spinner>
